fixed blog image overflow issue

--- a/src/app/features/blog/blog.component.scss
+++ b/src/app/features/blog/blog.component.scss
@@ -16,3 +16,12 @@
   text-align: center;
   width: 6.313rem;
 }
+.blog-image-container {
+  max-height: 28rem;
+  min-width: 45rem;
+  overflow: hidden;
+}
+.blog-image {
+  max-width: 100%;
+  height: auto;
+}
